# the_Consciousness_Machine

./: .gitignore  API_DOCUMENTATION.md  BRANDING_GUIDE.md  CHANGELOG.md  CLINICAL_TRIAL_PROTOCOLS.md  FUNDING_STRATEGY.md  HEALTHCARE_COMPLIANCE.md  INSTALLATION_GUIDE.md  INTERNATIONAL_EXPANSION.md  INVESTOR_PITCH_DECK.md  KOFI_STRATEGY.md  LICENSE  LINUX_FOUNDATION_STRATEGY.md  LOGO_INTEGRATION.md  PROJECT_SETUP.md  QUICK_START.md  README.md  RESEARCH_GRANT_TEMPLATE.md  SECURITY.md  additional_repo_docs.md  code_of_conduct.md  contributing_guidelines.md  executive_business_suite.md  index.html  main.py  package-lock.json  package.json  requirements.txt  setup-consciousness-machine.sh  setup-frontend.sh  specialized_documentation.md  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  clinical_implementation.md  config.yml  ethical_concern.md  feature_request.md  research_proposal.md
PROJECTS-NEW/AURA-BREE_SOVEREIGN/: .env.example  ANDROID_QUICK_START.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  capacitor.config.ts  docker-compose.yaml  index.html  package-lock.json  package.json  tailwind.config.ts  verify-routes.md
PROJECTS-NEW/project_sanctum/sanctum_cli/: README.md  pyproject.toml
PROJECTS-NEW/project_sanctum/sanctum_cli/sanctum_cli/: catalog.py  cli.py  detect.py  docgen.py  indexer.py  utils.py
aura-bree-docs-hub/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/: package.json  tailwind.config.js
projects2/: chatter_cli.py
src/: App.tsx  index.css  main.tsx
(+727 files in other folders)
